--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy
-matplotlib
-pandas
-scikit-learn
-torch==1.9.0
+# using python version 3.12.7
+numpy<2.0
+matplotlib==3.9.2
+pandas==2.2.3
+scikit-learn==1.5.2
+torch==2.2.1
